Add SVG icons and update logo in index.html for improved visuals

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/svg+xml" href="https://lfcostldktmoevensqdj.supabase.co/storage/v1/object/public/axii/white-logo.svg" />
     <title>AXII - Sistema de Automação de Sala de Aula</title>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -11,30 +12,7 @@
         <div class="container">
             <div class="nav-content">
                 <div class="logo">
-                    <svg width="48" height="34" viewBox="0 0 244 177" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M21.7552 177H0L120.294 2.48715e-05L180.014 87.6449L119.441 177H98.1119L158.259 87.6449L120.294 33.3479L21.7552 177Z" fill="url(#paint0_linear_1_78)"/>
-                        <path d="M75.0769 177H51.6154L96.1475 113.297L72.2594 112.87L82.7552 97.0507H130.105L75.0769 177Z" fill="url(#paint1_linear_1_78)"/>
-                        <path d="M185.133 92.7754L173.615 110.304L220.965 177H244L185.133 92.7754Z" fill="url(#paint2_linear_1_78)"/>
-                        <path d="M184.28 81.6594L173.615 66.6957L222.245 0L231.203 17.1014L184.28 81.6594Z" fill="url(#paint3_linear_1_78)"/>
-                        <defs>
-                            <linearGradient id="paint0_linear_1_78" x1="187.207" y1="-4.81631" x2="57.6939" y2="176.785" gradientUnits="userSpaceOnUse">
-                            <stop stop-color="#0071BC"/>
-                            <stop offset="0.831731" stop-color="#043556"/>
-                            </linearGradient>
-                            <linearGradient id="paint1_linear_1_78" x1="187.207" y1="-4.81631" x2="57.6939" y2="176.785" gradientUnits="userSpaceOnUse">
-                            <stop stop-color="#0071BC"/>
-                            <stop offset="0.831731" stop-color="#043556"/>
-                            </linearGradient>
-                            <linearGradient id="paint2_linear_1_78" x1="187.207" y1="-4.81631" x2="57.6939" y2="176.785" gradientUnits="userSpaceOnUse">
-                            <stop stop-color="#0071BC"/>
-                            <stop offset="0.831731" stop-color="#043556"/>
-                            </linearGradient>
-                            <linearGradient id="paint3_linear_1_78" x1="187.207" y1="-4.81631" x2="57.6939" y2="176.785" gradientUnits="userSpaceOnUse">
-                            <stop stop-color="#0071BC"/>
-                            <stop offset="0.831731" stop-color="#043556"/>
-                            </linearGradient>
-                        </defs>
-                    </svg>
+                    <img width="48" height="34" src="https://lfcostldktmoevensqdj.supabase.co/storage/v1/object/public/axii/logo.svg" alt="">
                     <span class="logo-text">AXII</span>
                 </div>
                 <ul class="nav-links">
@@ -97,17 +75,17 @@
             </div>
             <div class="problem-grid">
                 <div class="problem-card">
-                    <div class="problem-icon">⏱️</div>
+                    <div class="problem-icon"><img height="58px" src="img/clock.svg" alt=""></div>
                     <h3>Tempo Desperdiçado</h3>
                     <p>Minutos preciosos gastos ligando computadores, iniciando softwares e configurando projetores individualmente</p>
                 </div>
                 <div class="problem-card">
-                    <div class="problem-icon">⚠️</div>
+                    <div class="problem-icon"><img height="58px" src="img/triangle-exclamation.svg" alt=""></div>
                     <h3>Falhas Técnicas</h3>
                     <p>Interrupções constantes para resolver problemas técnicos que dispersam a atenção dos alunos</p>
                 </div>
                 <div class="problem-card">
-                    <div class="problem-icon">🔧</div>
+                    <div class="problem-icon"><img height="58" src="img/wrench.svg" alt=""></div>
                     <h3>Falta de Padronização</h3>
                     <p>Cada professor adota métodos diferentes, criando inconsistências e dificultando o suporte</p>
                 </div>
@@ -264,17 +242,17 @@
         <div class="container">
             <div class="mission-grid">
                 <div class="mission-card">
-                    <div class="mission-icon">🎯</div>
+                    <div class="mission-icon"><img height="58px" src="img/bullseye.svg" alt=""></div>
                     <h3>Missão</h3>
                     <p>Desenvolver uma solução tecnológica completa que centralize e automatize o gerenciamento de recursos, permitindo que professores e instituições trabalhem de forma mais organizada, eficiente e prática.</p>
                 </div>
                 <div class="mission-card">
-                    <div class="mission-icon">🚀</div>
+                    <div class="mission-icon"><img height="58px" src="img/rocket.svg" alt=""></div>
                     <h3>Visão</h3>
                     <p>Ser reconhecido como referência em sistemas de gerenciamento integrados, transformando a forma como instituições utilizam a tecnologia para organizar seus processos e recursos.</p>
                 </div>
                 <div class="mission-card">
-                    <div class="mission-icon">💎</div>
+                    <div class="mission-icon"><img height="58px" src="img/gem.svg" alt=""></div>
                     <h3>Valores</h3>
                     <ul class="values-list">
                         <li>Eficiência e produtividade</li>
@@ -316,30 +294,7 @@
             <div class="footer-content">
                 <div class="footer-brand">
                     <div class="logo">
-                        <svg width="48" height="34" viewBox="0 0 244 177" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M21.7552 177H0L120.294 2.48715e-05L180.014 87.6449L119.441 177H98.1119L158.259 87.6449L120.294 33.3479L21.7552 177Z" fill="url(#paint0_linear_1_78)"/>
-                            <path d="M75.0769 177H51.6154L96.1475 113.297L72.2594 112.87L82.7552 97.0507H130.105L75.0769 177Z" fill="url(#paint1_linear_1_78)"/>
-                            <path d="M185.133 92.7754L173.615 110.304L220.965 177H244L185.133 92.7754Z" fill="url(#paint2_linear_1_78)"/>
-                            <path d="M184.28 81.6594L173.615 66.6957L222.245 0L231.203 17.1014L184.28 81.6594Z" fill="url(#paint3_linear_1_78)"/>
-                            <defs>
-                                <linearGradient id="paint0_linear_1_78" x1="187.207" y1="-4.81631" x2="57.6939" y2="176.785" gradientUnits="userSpaceOnUse">
-                                <stop stop-color="#0071BC"/>
-                                <stop offset="0.831731" stop-color="#043556"/>
-                                </linearGradient>
-                                <linearGradient id="paint1_linear_1_78" x1="187.207" y1="-4.81631" x2="57.6939" y2="176.785" gradientUnits="userSpaceOnUse">
-                                <stop stop-color="#0071BC"/>
-                                <stop offset="0.831731" stop-color="#043556"/>
-                                </linearGradient>
-                                <linearGradient id="paint2_linear_1_78" x1="187.207" y1="-4.81631" x2="57.6939" y2="176.785" gradientUnits="userSpaceOnUse">
-                                <stop stop-color="#0071BC"/>
-                                <stop offset="0.831731" stop-color="#043556"/>
-                                </linearGradient>
-                                <linearGradient id="paint3_linear_1_78" x1="187.207" y1="-4.81631" x2="57.6939" y2="176.785" gradientUnits="userSpaceOnUse">
-                                <stop stop-color="#0071BC"/>
-                                <stop offset="0.831731" stop-color="#043556"/>
-                                </linearGradient>
-                            </defs>
-                        </svg>
+                        <img width="48" height="34" src="https://lfcostldktmoevensqdj.supabase.co/storage/v1/object/public/axii/logo.svg" />
                         <span class="logo-text">AXII</span>
                     </div>
                     <p class="footer-tagline">Automação inteligente para educação moderna</p>
